Made fixed header work, resolved content overlap with padding

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
+margin: 0;
 }
 
 html, body {
@@ -12,8 +12,16 @@ body {
   background-image: url(images/icelandicroad.jpg);
 }
 
-#headerContainer {
+#header {
   text-align: left;
   background-color: rgba(255,255,255,0.6);
   padding: 10px;
+  position: fixed;
+  width: 100%;
+}
+
+#resumeContainer {
+padding-top: 90px;
+width: 40%;
+color: white;
 }
